@@ -2,106 +2,86 @@ package com.bioxx.tfc.Entities.Mobs;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.List;
 
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityAgeable;
-import net.minecraft.entity.EntityLiving;
-import net.minecraft.entity.EntityLivingBase;
-import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIEatGrass;
-import net.minecraft.entity.ai.EntityAIFollowParent;
-import net.minecraft.entity.ai.EntityAILookIdle;
-import net.minecraft.entity.ai.EntityAISwimming;
-import net.minecraft.entity.ai.EntityAITempt;
-import net.minecraft.entity.ai.EntityAIWander;
-import net.minecraft.entity.ai.EntityAIWatchClosest;
+import net.minecraft.entity.*;
+import net.minecraft.entity.ai.*;
 import net.minecraft.entity.passive.EntityAnimal;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.util.ChatComponentText;
+import net.minecraft.util.ChatComponentTranslation;
 import net.minecraft.util.DamageSource;
-import net.minecraft.util.StatCollector;
 import net.minecraft.util.Vec3;
 import net.minecraft.world.World;
 
-import com.bioxx.tfc.TFCItems;
 import com.bioxx.tfc.Core.TFC_Core;
 import com.bioxx.tfc.Core.TFC_Sounds;
 import com.bioxx.tfc.Core.TFC_Time;
 import com.bioxx.tfc.Entities.AI.EntityAIAvoidEntityTFC;
 import com.bioxx.tfc.Entities.AI.EntityAIMateTFC;
 import com.bioxx.tfc.Entities.AI.EntityAIPanicTFC;
-import com.bioxx.tfc.Food.ItemFoodTFC;
 import com.bioxx.tfc.Items.ItemCustomNameTag;
+import com.bioxx.tfc.api.TFCItems;
+import com.bioxx.tfc.api.TFCOptions;
 import com.bioxx.tfc.api.Constant.Global;
 import com.bioxx.tfc.api.Entities.IAnimal;
-import com.bioxx.tfc.api.Entities.IAnimal.InteractionEnum;
 import com.bioxx.tfc.api.Util.Helper;
 
 public class EntityDeer extends EntityAnimal implements IAnimal
 {
+	private static final float GESTATION_PERIOD = 7.0f;
+	/*
+	 * 1 - dimorphism = the average relative size of females : males. This is calculated by cube-square law from
+	 * the square root of the ratio of female mass : male mass
+	 */
+	private static final float DIMORPHISM = 0.1728f;
+	private static final int DEGREE_OF_DIVERSION = 1;
+	private static final int FAMILIARITY_CAP = 70; // Adult caps at 70 since babies are currently impossible
 	/** The eat grass AI task for this mob. */
-	private final EntityAIEatGrass aiEatGrass = new EntityAIEatGrass(this);
+	protected final EntityAIEatGrass aiEatGrass = new EntityAIEatGrass(this);
 
 	private boolean running;
-	protected long animalID;
-	protected int sex = 0;
-	protected int hunger;
-	protected int age;
-	protected boolean pregnant;
-	protected int pregnancyRequiredTime;
-	protected long timeOfConception;
-	protected float mateSizeMod = 0;
-	protected float mateStrengthMod = 0;
-	protected float mateAggroMod = 0;
-	protected float mateObedMod = 0;
-	protected float mateColMod = 0;
-	protected float mateClimMod = 0;
-	protected float mateHardMod = 0;
-	public float size_mod;			//How large the animal is
-	public float strength_mod;		//how strong the animal is
-	public float aggression_mod = 1;//How aggressive / obstinate the animal is
-	public float obedience_mod = 1;	//How well the animal responds to commands.
-	public float colour_mod = 1;	//what the animal looks like
-	public float climate_mod = 1;	//climate adaptability
-	public float hard_mod = 1;		//hardiness
-	public boolean inLove;
-	public Vec3 attackedVec = null;
-	public Entity fearSource = null;
+	private long animalID;
+	private int sex;
+	private int hunger;
+	private boolean pregnant;
+	private int pregnancyRequiredTime;
+	private long timeOfConception;
+	private float mateSizeMod;
+	private float mateStrengthMod;
+	private float mateAggroMod;
+	private float mateObedMod;
+	private float sizeMod; //How large the animal is
+	private float strengthMod; //how strong the animal is
+	private float aggressionMod = 1;//How aggressive / obstinate the animal is
+	private float obedienceMod = 1; //How well the animal responds to commands.
+	private boolean inLove;
+	private Vec3 attackedVec;
+	private Entity fearSource;
 	
-	private boolean wasRoped = false;
-
-	int degreeOfDiversion = 1;
+	private boolean wasRoped;
 	
-	private int familiarity = 0;
-	private long lastFamiliarityUpdate = 0;
-	private boolean familiarizedToday = false;
+	private int familiarity;
+	private long lastFamiliarityUpdate;
+	private boolean familiarizedToday;
 	
-	protected float avgAdultWeight = 95;			//The average weight of adult males in kg
-	protected float dimorphism = 0.1728f;		//1 - dimorphism = the average relative size of females : males. This is calculated by cube-square law from
-											//the square root of the ratio of female mass : male mass
-
 	public EntityDeer(World par1World)
 	{
 		super(par1World);
 		animalID = TFC_Time.getTotalTicks() + getEntityId();
 		hunger = 168000;
 		pregnant = false;
-		pregnancyRequiredTime = 7 * TFC_Time.daysInMonth;
+		pregnancyRequiredTime = (int) (TFCOptions.animalTimeMultiplier * GESTATION_PERIOD * TFC_Time.ticksInMonth);
 		timeOfConception = 0;
 		mateSizeMod = 0;
 		sex = rand.nextInt(2);
-		size_mod =(float)Math.sqrt((((rand.nextInt (rand.nextInt((degreeOfDiversion + 1)*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + 1F) * (1.0F - dimorphism * sex));
-		strength_mod = (float)Math.sqrt((((rand.nextInt (rand.nextInt(degreeOfDiversion*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + size_mod));
-		aggression_mod = (float)Math.sqrt((((rand.nextInt (rand.nextInt(degreeOfDiversion*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + 1));
-		obedience_mod = (float)Math.sqrt((((rand.nextInt (rand.nextInt(degreeOfDiversion*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + (1f/aggression_mod)));
-		colour_mod = (float)Math.sqrt((((rand.nextInt (rand.nextInt((degreeOfDiversion+2)*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + 1));
-		hard_mod = (float)Math.sqrt((((rand.nextInt (rand.nextInt(degreeOfDiversion*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + size_mod));
-		climate_mod = (float)Math.sqrt((((rand.nextInt (rand.nextInt(degreeOfDiversion*10)+1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f) + hard_mod));
+		sizeMod = (float) Math.sqrt(((rand.nextInt(rand.nextInt((DEGREE_OF_DIVERSION + 1) * 10) + 1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f + 1F) * (1.0F - DIMORPHISM * sex));
+		strengthMod = (float) Math.sqrt(((rand.nextInt(rand.nextInt(DEGREE_OF_DIVERSION * 10) + 1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f + sizeMod));
+		aggressionMod = (float) Math.sqrt(((rand.nextInt(rand.nextInt(DEGREE_OF_DIVERSION * 10) + 1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f + 1));
+		obedienceMod = (float) Math.sqrt(((rand.nextInt(rand.nextInt(DEGREE_OF_DIVERSION * 10) + 1) * (rand.nextBoolean() ? 1 : -1)) * 0.01f + 1f / aggressionMod));
 		running = false;
 
 		this.setSize(0.9F, 1.3F);
@@ -112,73 +92,401 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 		this.tasks.addTask(3, new EntityAIAvoidEntityTFC(this, EntityPlayer.class, 12.0F, 0.5F, 0.7F));
 		this.tasks.addTask(3, new EntityAIAvoidEntityTFC(this, EntityWolfTFC.class, 8f, 0.5F, 0.7F));
 		this.tasks.addTask(3, new EntityAIAvoidEntityTFC(this, EntityBear.class, 16f, 0.25F, 0.3F));
-		this.tasks.addTask(3, new EntityAITempt(this, 0.25F, Items.wheat, false));
 		this.tasks.addTask(4, new EntityAIFollowParent(this, 0.25F));
 		this.tasks.addTask(5, this.aiEatGrass);
 		this.tasks.addTask(1, new EntityAIWander(this, 0.5));
 		this.tasks.addTask(7, new EntityAIWatchClosest(this, EntityPlayer.class, 6.0F));
 		this.tasks.addTask(8, new EntityAILookIdle(this));
 
-		//	We hijack the growingAge to hold the day of birth rather
-		//	than number of ticks to next growth event. We want spawned
-		//	animals to be adults, so we set their birthdays far enough back
-		//	in time such that they reach adulthood now.
-		//
-		this.setAge((int) TFC_Time.getTotalDays() - getNumberOfDaysToAdult());
+		/*
+		 * We hijack the growingAge to hold the day of birth rather than the number of ticks to the next growth event.
+		 * We want spawned animals to be adults, so we set their birthdays far enough back in time such that they reach adulthood now.
+		 */
+		this.setAge(TFC_Time.getTotalDays() - getNumberOfDaysToAdult());
 	}
 
-	public EntityDeer(World par1World, IAnimal mother,  ArrayList<Float> data)
+	public EntityDeer(World par1World, IAnimal mother, List<Float> data)
 	{
 		this(par1World);
-		float father_size = 1;
-		float father_str = 1;
-		float father_aggro = 1;
-		float father_obed = 1;
-		float father_col = 1;
-		float father_clim = 1;
-		float father_hard = 1;
+		float fatherSize = 1;
+		float fatherStr = 1;
+		float fatherAggro = 1;
+		float fatherObed = 1;
 		for(int i = 0; i < data.size(); i++){
 			switch(i){
-			case 0:father_size = data.get(i);break;
-			case 1:father_str = data.get(i);break;
-			case 2:father_aggro = data.get(i);break;
-			case 3:father_obed = data.get(i);break;
-			case 4:father_col = data.get(i);break;
-			case 5:father_clim = data.get(i);break;
-			case 6:father_hard = data.get(i);break;
+			case 0:fatherSize = data.get(i);break;
+			case 1:fatherStr = data.get(i);break;
+			case 2:fatherAggro = data.get(i);break;
+			case 3:fatherObed = data.get(i);break;
 			default:break;
 			}
 		}
 		this.posX = ((EntityLivingBase)mother).posX;
 		this.posY = ((EntityLivingBase)mother).posY;
 		this.posZ = ((EntityLivingBase)mother).posZ;
-		float invSizeRatio = 1f / (2 - dimorphism);
-		size_mod = (float)Math.sqrt(size_mod * size_mod * (float)Math.sqrt((mother.getSize() + father_size) * invSizeRatio));
-		strength_mod = (float)Math.sqrt(strength_mod * strength_mod * (float)Math.sqrt((mother.getStrength() + father_str) * 0.5F));
-		aggression_mod = (float)Math.sqrt(aggression_mod * aggression_mod * (float)Math.sqrt((mother.getAggression() + father_aggro) * 0.5F));
-		obedience_mod = (float)Math.sqrt(obedience_mod * obedience_mod * (float)Math.sqrt((mother.getObedience() + father_obed) * 0.5F));
-		colour_mod = (float)Math.sqrt(colour_mod * colour_mod * (float)Math.sqrt((mother.getColour() + father_col) * 0.5F));
-		hard_mod = (float)Math.sqrt(hard_mod * hard_mod * (float)Math.sqrt((mother.getHardiness() + father_hard) * 0.5F));
-		climate_mod = (float)Math.sqrt(climate_mod * climate_mod * (float)Math.sqrt((mother.getClimateAdaptation() + father_clim) * 0.5F));
-
+		float invSizeRatio = 1f / (2 - DIMORPHISM);
+		sizeMod = (float)Math.sqrt(sizeMod * sizeMod * (float)Math.sqrt((mother.getSizeMod() + fatherSize) * invSizeRatio));
+		strengthMod = (float)Math.sqrt(strengthMod * strengthMod * (float)Math.sqrt((mother.getStrengthMod() + fatherStr) * 0.5F));
+		aggressionMod = (float)Math.sqrt(aggressionMod * aggressionMod * (float)Math.sqrt((mother.getAggressionMod() + fatherAggro) * 0.5F));
+		obedienceMod = (float)Math.sqrt(obedienceMod * obedienceMod * (float)Math.sqrt((mother.getObedienceMod() + fatherObed) * 0.5F));
+		
 		this.familiarity = (int) (mother.getFamiliarity()<90?mother.getFamiliarity()/2:mother.getFamiliarity()*0.9f);
 		
-		//	We hijack the growingAge to hold the day of birth rather
-		//	than number of ticks to next growth event.
-		//
-		this.setAge((int) TFC_Time.getTotalDays());
+		// We hijack the growingAge to hold the day of birth rather than number of ticks to next growth event.
+		this.setAge(TFC_Time.getTotalDays());
 	}
 	
+
+	@Override
+	protected void applyEntityAttributes()
+	{
+		super.applyEntityAttributes();
+		this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(400);//MaxHealth
+	}
+
+	@Override
+	public boolean attackEntityFrom(DamageSource par1DamageSource, float par2)
+	{
+		Entity entity = par1DamageSource.getEntity();
+		if(entity != null)
+		{
+			setAttackedVec(Vec3.createVectorHelper(entity.posX, entity.posY, entity.posZ));
+			setFearSource(entity);
+		}
+		return super.attackEntityFrom(par1DamageSource, par2);
+	}
+
+	@Override
+	protected boolean canDespawn()
+	{
+		return this.ticksExisted > 10000 && !wasRoped;
+	}
+
+	/*@Override
+	protected void updateAITasks()
+	{
+		super.updateAITasks();
+	}*/
+
+	@Override
+	public boolean canFamiliarize()
+	{
+		return !isAdult() || isAdult() && this.familiarity <= FAMILIARITY_CAP;
+	}
+
+	@Override
+	public boolean canMateWith(IAnimal animal)
+	{
+		return animal.getGender() != this.getGender() &&this.isAdult() && animal.isAdult() &&
+				animal instanceof EntityDeer;
+	}
+
+	@Override
+	public boolean checkFamiliarity(InteractionEnum interaction, EntityPlayer player) {
+		boolean flag = false;
+		switch(interaction){
+		case BREED: flag = familiarity > 20;break;
+		case NAME: flag = familiarity > 60;break;
+		case TOLERATEPLAYER: flag = familiarity > 40;break;
+		default: break;
+		}
+		if(!flag && player != null && !player.worldObj.isRemote){
+			TFC_Core.sendInfoMessage(player, new ChatComponentTranslation("entity.notFamiliar"));
+		}
+		return flag;
+	}
+
+	@Override
+	public EntityAgeable createChild(EntityAgeable entityageable)
+	{
+		return createChildTFC(entityageable);
+	}
+
+	@Override
+	public EntityAgeable createChildTFC(EntityAgeable eAgeable)
+	{
+		ArrayList<Float> data = new ArrayList<Float>();
+		data.add(eAgeable.getEntityData().getFloat("MateSize"));
+		data.add(eAgeable.getEntityData().getFloat("MateStrength"));
+		data.add(eAgeable.getEntityData().getFloat("MateAggro"));
+		data.add(eAgeable.getEntityData().getFloat("MateObed"));
+		return new EntityDeer(worldObj, this, data);
+	}
+
+	/**
+	 * Drop 0-2 items of this living's type
+	 */
+	@Override
+	protected void dropFewItems(boolean par1, int par2)
+	{
+		float ageMod = TFC_Core.getPercentGrown(this);	
+		this.entityDropItem(new ItemStack(TFCItems.hide, 1, Math.max(0, Math.min(2, (int)(ageMod * sizeMod * 1.84)))), 0);
+		this.dropItem(Items.bone, (int)((rand.nextInt(4) + 2) * ageMod));
+		float foodWeight = ageMod * (this.sizeMod * 2400);
+
+		TFC_Core.animalDropMeat(this, TFCItems.venisonRaw, foodWeight);
+	}
+
+	@Override
+	public void eatGrassBonus()
+	{
+		hunger += 24000;
+	}
 
 	@Override
 	protected void entityInit()
 	{
 		super.entityInit();	
-		this.dataWatcher.addObject(13, new Integer(0)); //sex (1 or 0)
+		this.dataWatcher.addObject(13, Integer.valueOf(0)); //sex (1 or 0)
 		this.dataWatcher.addObject(15, Integer.valueOf(0));		//age
 		
-		this.dataWatcher.addObject(22, Integer.valueOf(0));	//Size, strength, aggression, obedience
-		this.dataWatcher.addObject(23, Integer.valueOf(0));	//Colour, climate, hardiness, familiarity
+		this.dataWatcher.addObject(22, Integer.valueOf(0)); //Size, strength, aggression, obedience
+		this.dataWatcher.addObject(23, Integer.valueOf(0)); //familiarity, familiarizedToday, pregnant, empty slot
+		this.dataWatcher.addObject(24, String.valueOf("0")); // Time of conception, stored as a string since we can't do long
+	}
+
+	@Override
+	public void familiarize(EntityPlayer ep) {
+		ItemStack stack = ep.getHeldItem();
+		if (stack != null && stack.getItem() != null && stack.getItem().equals(TFCItems.powder) && stack.getItemDamage() == 9 &&
+			!familiarizedToday && canFamiliarize())
+		{
+			if (!ep.capabilities.isCreativeMode)
+			{
+				stack.stackSize--;
+				ep.inventory.setInventorySlotContents(ep.inventory.currentItem,stack);
+			}
+			worldObj.playSoundAtEntity(this, "random.burp", 0.5F, worldObj.rand.nextFloat() * 0.1F + 0.9F);
+			this.hunger += 24000;
+			familiarizedToday = true;
+			this.getLookHelper().setLookPositionWithEntity(ep, 0, 0);
+			this.playLivingSound();
+		}
+	}
+
+	@Override
+	public float getAggressionMod()
+	{
+		return aggressionMod;
+	}
+
+	@Override
+	public int getAnimalTypeID()
+	{
+		return Helper.stringToInt("deer");
+	}
+
+	@Override
+	public Vec3 getAttackedVec()
+	{
+		return attackedVec;
+	}
+
+	@Override
+	public int getBirthDay()
+	{
+		return this.dataWatcher.getWatchableObjectInt(15);
+	}
+
+	/**
+	 * Returns the sound this mob makes on death.
+	 */
+	@Override
+	protected String getDeathSound()
+	{
+		return TFC_Sounds.DEERDEATH;
+	}
+
+	/**
+	 * Returns the item ID for the item the mob drops on death.
+	 */
+	@Override
+	protected Item getDropItem()
+	{
+		return Items.leather;
+	}
+
+	@Override
+	public int getDueDay()
+	{
+		return TFC_Time.getDayFromTotalHours((timeOfConception + pregnancyRequiredTime) / 1000);
+	}
+	@Override
+	public EntityLiving getEntity()
+	{
+		return this;
+	}
+
+	@Override
+	public int getFamiliarity() {
+		return familiarity;
+	}
+
+	@Override
+	public boolean getFamiliarizedToday()
+	{
+		return familiarizedToday;
+	}
+
+	@Override
+	public Entity getFearSource()
+	{
+		return this.fearSource;
+	}
+
+	@Override
+	public GenderEnum getGender()
+	{
+		return GenderEnum.GENDERS[dataWatcher.getWatchableObjectInt(13)];
+	}
+
+	@Override
+	public int getHunger()
+	{
+		return hunger;
+	}
+
+	/**
+	 * Returns the sound this mob makes when it is hurt.
+	 */
+	@Override
+	protected String getHurtSound()
+	{
+		return TFC_Sounds.DEERHURT;
+	}
+
+	@Override
+	public boolean getInLove()
+	{
+		return inLove;
+	}
+
+	public long getLastFamiliarityUpdate()
+	{
+		return lastFamiliarityUpdate;
+	}
+
+	/**
+	 * Returns the sound this mob makes while it's alive.
+	 */
+	@Override
+	protected String getLivingSound()
+	{
+		if(getGender() == GenderEnum.MALE && isAdult() && worldObj.rand.nextInt(100) < 5)
+			return TFC_Sounds.DEERCRY;
+		return TFC_Sounds.DEERSAY;
+	}
+
+	@Override
+	public int getNumberOfDaysToAdult()
+	{
+		return (int) (TFCOptions.animalTimeMultiplier * TFC_Time.daysInMonth * 24);
+	}
+
+	@Override
+	public float getObedienceMod()
+	{
+		return obedienceMod;
+	}
+
+	public int getPregnancyRequiredTime()
+	{
+		return pregnancyRequiredTime;
+	}
+
+	public boolean getRunning()
+	{
+		return running;
+	}
+
+	public int getSex()
+	{
+		return sex;
+	}
+
+	@Override
+	public float getSizeMod()
+	{
+		return sizeMod;
+	}
+
+	@Override
+	public float getStrengthMod()
+	{
+		return strengthMod;
+	}
+
+	public long getTimeOfConception()
+	{
+		return timeOfConception;
+	}
+
+	@Override
+	public void handleFamiliarityUpdate() {
+		int totalDays = TFC_Time.getTotalDays();
+		if(lastFamiliarityUpdate < totalDays){
+			if(familiarizedToday && familiarity < 100){
+				lastFamiliarityUpdate = totalDays;
+				familiarizedToday = false;
+				float familiarityChange = 6 * obedienceMod / aggressionMod;
+				if (this.isAdult() && familiarity <= FAMILIARITY_CAP)
+				{
+					familiarity += familiarityChange;
+				}
+				else if(!this.isAdult()){
+					float ageMod = 2f/(1f + TFC_Core.getPercentGrown(this));
+					familiarity += ageMod * familiarityChange;
+					if(familiarity > 70){
+						obedienceMod *= 1.01f;
+					}
+				}
+			}
+			else if(familiarity < 30){
+				familiarity -= 2*(TFC_Time.getTotalDays() - lastFamiliarityUpdate);
+				lastFamiliarityUpdate = totalDays;
+			}
+		}
+		if(familiarity > 100)familiarity = 100;
+		if(familiarity < 0)familiarity = 0;
+	}
+
+	public boolean hasBeenRoped()
+	{
+		return wasRoped;
+	}
+
+	/**
+	 * Called when a player interacts with a mob. e.g. gets milk from a cow, gets into the saddle on a pig.
+	 */
+	@Override
+	public boolean interact(EntityPlayer player)
+	{
+		if(!worldObj.isRemote)
+		{
+			if (player.isSneaking() && canFamiliarize())
+			{
+				this.familiarize(player);
+				return true;
+			}
+			if(getGender()==GenderEnum.FEMALE && pregnant)
+			{
+				TFC_Core.sendInfoMessage(player, new ChatComponentTranslation("entity.pregnant"));
+			}
+		}
+		ItemStack itemstack = player.getHeldItem();
+		if(itemstack != null && itemstack.getItem() instanceof ItemCustomNameTag && itemstack.hasTagCompound() && itemstack.stackTagCompound.hasKey("ItemName")){
+			if(this.trySetName(itemstack.stackTagCompound.getString("ItemName"), player)){
+				itemstack.stackSize--;
+			}
+			return true;
+		}
+		return super.interact(player);
+	}
+
+	@Override
+	public boolean isAdult()
+	{
+		return getBirthDay()+getNumberOfDaysToAdult() <= TFC_Time.getTotalDays();
 	}
 
 	/**
@@ -191,68 +499,36 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 	}
 
 	@Override
-	protected boolean canDespawn()
+	public boolean isChild()
 	{
-		return this.ticksExisted > 10000 && !wasRoped;
+		return !isAdult();
+	}
+
+	//Unused for now
+	@Override
+	public boolean isFood(ItemStack item) {
+		return false;
 	}
 
 	@Override
-	protected void updateAITasks()
+	public boolean isPregnant()
 	{
-		super.updateAITasks();
+		return pregnant;
 	}
 
-	public boolean getRunning()
+	@Override
+	public void mate(IAnimal otherAnimal) 
 	{
-		return running;
-	}
-
-	public void syncData()
-	{
-		if(dataWatcher!= null)
+		if (sex == 0)
 		{
-			if(!this.worldObj.isRemote)
-			{
-				this.dataWatcher.updateObject(13, Integer.valueOf(sex));
-
-				byte[] values = {
-						TFC_Core.getByteFromSmallFloat(size_mod),
-						TFC_Core.getByteFromSmallFloat(strength_mod),
-						TFC_Core.getByteFromSmallFloat(aggression_mod),
-						TFC_Core.getByteFromSmallFloat(obedience_mod),
-						TFC_Core.getByteFromSmallFloat(colour_mod),
-						TFC_Core.getByteFromSmallFloat(climate_mod),
-						TFC_Core.getByteFromSmallFloat(hard_mod),
-						(byte)familiarity
-				};
-				this.dataWatcher.updateObject(22, ByteBuffer.wrap(values).getInt());
-				this.dataWatcher.updateObject(23, ByteBuffer.wrap(values).getInt());
-			}
-			else
-			{
-				sex = this.dataWatcher.getWatchableObjectInt(13);
-				
-				ByteBuffer buf = ByteBuffer.allocate(Long.SIZE / Byte.SIZE);
-				buf.putInt(this.dataWatcher.getWatchableObjectInt(22));
-				buf.putInt(this.dataWatcher.getWatchableObjectInt(23));
-				byte[] values = buf.array();
-				
-				size_mod = TFC_Core.getSmallFloatFromByte(values[0]);
-				strength_mod = TFC_Core.getSmallFloatFromByte(values[1]);
-				aggression_mod = TFC_Core.getSmallFloatFromByte(values[2]);
-				obedience_mod = TFC_Core.getSmallFloatFromByte(values[3]);
-				colour_mod = TFC_Core.getSmallFloatFromByte(values[4]);
-				climate_mod = TFC_Core.getSmallFloatFromByte(values[5]);
-				hard_mod = TFC_Core.getSmallFloatFromByte(values[6]);
-				
-				familiarity = values[7];
-			}
+			otherAnimal.mate(this);
+			return;
 		}
-	}
-
-	public void setRunning(boolean r)
-	{
-		running = r;
+		timeOfConception = TFC_Time.getTotalTicks();
+		pregnant = true;
+		resetInLove();
+		otherAnimal.setInLove(false);
+		mateSizeMod = otherAnimal.getSizeMod();
 	}
 
 	/**
@@ -262,14 +538,6 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 	@Override
 	public void onLivingUpdate()
 	{
-		/*if(pregnant){
-			if(TFC_Time.getTotalTicks() >= conception + pregnancyTime * TFC_Settings.dayLength){
-				EntityDeer baby = new EntityDeer(worldObj, this,mateSizeMod);
-				giveBirth(baby);
-				pregnant = false;
-			}
-		}*/
-
 		if(super.isInLove())
 		{
 			super.resetInLove();
@@ -290,7 +558,7 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 		
 		this.handleFamiliarityUpdate();
 
-		if(pregnant)
+		if (!this.worldObj.isRemote && isPregnant())
 		{
 			if(TFC_Time.getTotalTicks() >= timeOfConception + pregnancyRequiredTime)
 			{
@@ -299,14 +567,14 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 				baby.rotationYawHead = baby.rotationYaw;
 				baby.renderYawOffset = baby.rotationYaw;
 				worldObj.spawnEntityInWorld(baby);
-				baby.setAge((int)TFC_Time.getTotalDays());
+				baby.setAge(TFC_Time.getTotalDays());
 				pregnant = false;
 			}
 		}
 
 		if(attackedVec != null)
 		{
-			//System.out.println(this.entityId+", Vec: "+attackedVec.xCoord+", "+attackedVec.yCoord+", "+attackedVec.zCoord);
+			//TerraFirmaCraft.log.info(this.entityId+", Vec: "+attackedVec.xCoord+", "+attackedVec.yCoord+", "+attackedVec.zCoord);
 			Vec3 positionVec = Vec3.createVectorHelper(this.posX, this.posY, this.posZ);
 			if(this.getFearSource() != null && this.getDistanceSqToEntity(this.getFearSource()) > Global.SEALEVEL)
 			{
@@ -322,121 +590,16 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 		{
 			this.heal(1);
 		}
+		else if(hunger < 144000 && super.isInLove()){
+			this.setInLove(false);
+		}
 
 		/**
 		 * This Cancels out the changes made to growingAge by EntityAgeable
 		 * */
-		TFC_Core.PreventEntityDataUpdate = true;
+		TFC_Core.preventEntityDataUpdate = true;
 		super.onLivingUpdate();
-		TFC_Core.PreventEntityDataUpdate = false;
-	}
-
-	@Override
-	public boolean attackEntityFrom(DamageSource par1DamageSource, float par2)
-	{
-		Entity entity = par1DamageSource.getEntity();
-		if(entity != null)
-		{
-			setAttackedVec(Vec3.createVectorHelper(entity.posX, entity.posY, entity.posZ));
-			setFearSource(entity);
-		}
-		return super.attackEntityFrom(par1DamageSource, par2);
-	}
-
-	@Override
-	protected void applyEntityAttributes()
-	{
-		super.applyEntityAttributes();
-		this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(400);//MaxHealth
-	}
-
-	/**
-	 * Drop 0-2 items of this living's type
-	 */
-	@Override
-	protected void dropFewItems(boolean par1, int par2)
-	{
-		float ageMod = TFC_Core.getPercentGrown(this);	
-		this.entityDropItem(new ItemStack(TFCItems.Hide, 1, Math.max(0, Math.min(2, (int)(ageMod * size_mod * 1.84)))), 0);
-		this.dropItem(Items.bone, (int)((rand.nextInt(4) + 2) * ageMod));
-		float foodWeight = ageMod * (this.size_mod * 2400);//528 oz (33lbs) is the average yield of lamb after slaughter and processing
-
-		TFC_Core.animalDropMeat(this, TFCItems.venisonRaw, foodWeight);
-	}
-
-	/**
-	 * Returns the item ID for the item the mob drops on death.
-	 */
-	@Override
-	protected Item getDropItem()
-	{
-		return Item.getItemFromBlock(Blocks.wool);
-	}
-
-	/**
-	 * Called when a player interacts with a mob. e.g. gets milk from a cow, gets into the saddle on a pig.
-	 */
-	@Override
-	public boolean interact(EntityPlayer player)
-	{
-		if(!worldObj.isRemote)
-		{
-			if(player.isSneaking()){
-				this.familiarize(player);
-				return true;
-			}
-			//par1EntityPlayer.addChatMessage(new ChatComponentText(getGender()==GenderEnum.FEMALE?"Female":"Male"));
-			if(getGender()==GenderEnum.FEMALE && pregnant)
-			{
-				player.addChatMessage(new ChatComponentText("Pregnant"));
-			}
-			//par1EntityPlayer.addChatMessage("12: "+dataWatcher.getWatchableObjectInt(12)+", 15: "+dataWatcher.getWatchableObjectInt(15));
-		}
-		ItemStack itemstack = player.getHeldItem();
-		if(itemstack != null && itemstack.getItem() instanceof ItemCustomNameTag && itemstack.hasTagCompound() && itemstack.stackTagCompound.hasKey("ItemName")){
-			if(this.trySetName(itemstack.stackTagCompound.getString("ItemName"), player)){
-				itemstack.stackSize--;
-			}
-			return true;
-		}
-		return super.interact(player);
-	}
-
-	/**
-	 * (abstract) Protected helper method to write subclass entity data to NBT.
-	 */
-	@Override
-	public void writeEntityToNBT(NBTTagCompound nbt)
-	{
-		super.writeEntityToNBT(nbt);
-		nbt.setInteger ("Sex", sex);
-		nbt.setLong ("Animal ID", animalID);
-		nbt.setFloat ("Size Modifier", size_mod);
-		
-		nbt.setInteger("Familiarity", familiarity);
-		nbt.setLong("lastFamUpdate", lastFamiliarityUpdate);
-		nbt.setBoolean("Familiarized Today", familiarizedToday);
-
-		nbt.setFloat ("Strength Modifier", strength_mod);
-		nbt.setFloat ("Aggression Modifier", aggression_mod);
-		nbt.setFloat ("Obedience Modifier", obedience_mod);
-		nbt.setFloat ("Colour Modifier", colour_mod);
-		nbt.setFloat ("Climate Adaptation Modifier", climate_mod);
-		nbt.setFloat ("Hardiness Modifier", hard_mod);
-		
-		nbt.setBoolean("wasRoped", wasRoped);
-
-		nbt.setInteger ("Hunger", hunger);
-		nbt.setBoolean("Pregnant", pregnant);
-		nbt.setFloat("MateSize", mateSizeMod);
-		nbt.setFloat("MateStrength", mateStrengthMod);
-		nbt.setFloat("MateAggro", mateAggroMod);
-		nbt.setFloat("MateObed", mateObedMod);
-		nbt.setFloat("MateCol", mateColMod);
-		nbt.setFloat("MateClim", mateClimMod);
-		nbt.setFloat("MateHard", mateHardMod);
-		nbt.setLong("ConceptionTime", timeOfConception);
-		nbt.setInteger("Age", getBirthDay());
+		TFC_Core.preventEntityDataUpdate = false;
 	}
 
 	/**
@@ -448,18 +611,15 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 		super.readEntityFromNBT(nbt);
 		animalID = nbt.getLong ("Animal ID");
 		sex = nbt.getInteger ("Sex");
-		size_mod = nbt.getFloat ("Size Modifier");
+		sizeMod = nbt.getFloat ("Size Modifier");
 
 		familiarity = nbt.getInteger("Familiarity");
 		lastFamiliarityUpdate = nbt.getLong("lastFamUpdate");
 		familiarizedToday = nbt.getBoolean("Familiarized Today");
 		
-		strength_mod = nbt.getFloat ("Strength Modifier");
-		aggression_mod = nbt.getFloat ("Aggression Modifier");
-		obedience_mod = nbt.getFloat ("Obedience Modifier");
-		colour_mod = nbt.getFloat ("Colour Modifier");
-		climate_mod = nbt.getFloat ("Climate Adaptation Modifier");
-		hard_mod = nbt.getFloat ("Hardiness Modifier");
+		strengthMod = nbt.getFloat ("Strength Modifier");
+		aggressionMod = nbt.getFloat ("Aggression Modifier");
+		obedienceMod = nbt.getFloat ("Obedience Modifier");
 
 		wasRoped = nbt.getBoolean("wasRoped");
 		
@@ -469,245 +629,22 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 		mateStrengthMod = nbt.getFloat("MateStrength");
 		mateAggroMod = nbt.getFloat("MateAggro");
 		mateObedMod = nbt.getFloat("MateObed");
-		mateColMod = nbt.getFloat("MateCol");
-		mateClimMod = nbt.getFloat("MateClim");
-		mateHardMod = nbt.getFloat("MateHard");
 		timeOfConception = nbt.getLong("ConceptionTime");
 		this.dataWatcher.updateObject(15, nbt.getInteger ("Age"));
 	}
-
-	/**
-	 * Returns the sound this mob makes while it's alive.
-	 */
-	@Override
-	protected String getLivingSound()
-	{
-		if(getGender() == GenderEnum.MALE && isAdult() && worldObj.rand.nextInt(100) < 5)
-			return TFC_Sounds.DEERCRY;
-		return TFC_Sounds.DEERSAY;
-	}
-
-	/**
-	 * Returns the sound this mob makes when it is hurt.
-	 */
-	@Override
-	protected String getHurtSound()
-	{
-		return TFC_Sounds.DEERHURT;
-	}
-
-	/**
-	 * Returns the sound this mob makes on death.
-	 */
-	@Override
-	protected String getDeathSound()
-	{
-		return TFC_Sounds.DEERDEATH;
-	}
-
-	@Override
-	public void setGrowingAge(int par1)
-	{
-		if(!TFC_Core.PreventEntityDataUpdate)
-		{
-			this.dataWatcher.updateObject(12, Integer.valueOf(par1));
-		}
-	}
-
-	@Override
-	public boolean isChild()
-	{
-		return !isAdult();
-	}
-
-	/*
-	@Override
-	public EntityAgeable createChild(EntityAgeable entityageable) 
-	{
-		return new EntityDeer(worldObj, this, entityageable.getEntityData().getInteger("Size Modifier"));
-	}*/
-
-	//Commented out old method, the third variable should be the size modifier of the father, not the mother
-	@Override
-	public EntityAgeable createChild(EntityAgeable entityageable)
-	{
-		/*ArrayList<Float> data = new ArrayList<Float>();
-		data.add(mateSizeMod);
-		return new EntityDeer(worldObj, this, data);*/
-		return null;
-	}
-
-	@Override
-	public int getBirthDay()
-	{
-		return this.dataWatcher.getWatchableObjectInt(15);
-	}
-
-	@Override
-	public int getNumberOfDaysToAdult()
-	{
-		return TFC_Time.daysInMonth * 24;
-	}
-
-	@Override
-	public boolean isAdult()
-	{
-		return getBirthDay()+getNumberOfDaysToAdult() <= TFC_Time.getTotalDays();
-	}
-
-	@Override
-	public float getSize()
-	{
-		return size_mod;
-	}
-
-	@Override
-	public boolean isPregnant()
-	{
-		return pregnant;
-	}
-
-	@Override
-	public EntityLiving getEntity()
-	{
-		return this;
-	}
-
-	@Override
-	public boolean canMateWith(IAnimal animal)
-	{
-		if(animal.getGender() != this.getGender() && animal.isAdult() && animal instanceof EntityDeer)
-			return true;
-		else
-			return false;
-	}
-
-	@Override
-	public void mate(IAnimal otherAnimal) 
-	{
-		if (sex == 0)
-		{
-			otherAnimal.mate(this);
-			return;
-		}
-		timeOfConception = TFC_Time.getTotalTicks();
-		pregnant = true;
-		//targetMate.setGrowingAge (TFC_Settings.dayLength);
-		resetInLove();
-		otherAnimal.setInLove(false);
-		mateSizeMod = otherAnimal.getSize();
-	}
-
-	@Override
-	public boolean getInLove()
-	{
-		return inLove;
-	}
-
-	@Override
-	public void setInLove(boolean b)
-	{
-		this.inLove = b;
-	}
-
-	@Override
-	public int getAnimalTypeID()
-	{
-		return Helper.stringToInt("deer");
-	}
-
-	@Override
-	public void eatGrassBonus()
-	{
-		hunger += 24000;
-	}
-
-	@Override
-	public int getHunger()
-	{
-		return hunger;
-	}
-
-	@Override
-	public void setHunger(int h)
-	{
-		hunger = h;
-	}
-
-	@Override
-	public GenderEnum getGender()
-	{
-		return GenderEnum.genders[getSex()];
-	}
-
-	@Override
-	public int getSex()
-	{
-		return dataWatcher.getWatchableObjectInt(13);
-	}
-
-	@Override
-	public EntityAgeable createChildTFC(EntityAgeable eAgeable)
-	{
-		ArrayList<Float> data = new ArrayList<Float>();
-		data.add(eAgeable.getEntityData().getFloat("MateSize"));
-		data.add(eAgeable.getEntityData().getFloat("MateStrength"));
-		data.add(eAgeable.getEntityData().getFloat("MateAggro"));
-		data.add(eAgeable.getEntityData().getFloat("MateObed"));
-		data.add(eAgeable.getEntityData().getFloat("MateCol"));
-		data.add(eAgeable.getEntityData().getFloat("MateClim"));
-		data.add(eAgeable.getEntityData().getFloat("MateHard"));
-		return new EntityDeer(worldObj, this, data);
-	}
-
+	
 	@Override
 	public void setAge(int par1)
 	{
 		this.dataWatcher.updateObject(15, Integer.valueOf(par1));
 	}
-
+	
 	@Override
-	public float getStrength()
+	public void setAggressionMod(float aggressionMod)
 	{
-		return strength_mod;
+		this.aggressionMod = aggressionMod;
 	}
-
-	@Override
-	public float getAggression()
-	{
-		return aggression_mod;
-	}
-
-	@Override
-	public float getObedience()
-	{
-		return obedience_mod;
-	}
-
-	@Override
-	public float getColour()
-	{
-		return colour_mod;
-	}
-
-	@Override
-	public float getClimateAdaptation()
-	{
-		return climate_mod;
-	}
-
-	@Override
-	public float getHardiness()
-	{
-		return hard_mod;
-	}
-
-	@Override
-	public Vec3 getAttackedVec()
-	{
-		return attackedVec;
-	}
-
+	
 	@Override
 	public void setAttackedVec(Vec3 attackedVec)
 	{
@@ -715,9 +652,20 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 	}
 
 	@Override
-	public Entity getFearSource()
+	public void setBirthDay(int day)
 	{
-		return this.fearSource;
+		this.dataWatcher.updateObject(15, day);
+	}
+
+	@Override
+	public void setFamiliarity(int familiarity)
+	{
+		this.familiarity = familiarity;
+	}
+
+	public void setFamiliarizedToday(boolean familiarizedToday)
+	{
+		this.familiarizedToday = familiarizedToday;
 	}
 
 	@Override
@@ -727,91 +675,167 @@ public class EntityDeer extends EntityAnimal implements IAnimal
 	}
 
 	@Override
-	public int getFamiliarity() {
-		// TODO Auto-generated method stub
-		return familiarity;
-	}
-
-	@Override
-	public void handleFamiliarityUpdate() {
-		int totalDays = TFC_Time.getTotalDays();
-		if(lastFamiliarityUpdate < totalDays){
-			if(familiarizedToday && familiarity < 100){
-				lastFamiliarityUpdate = totalDays;
-				familiarizedToday = false;
-				float familiarityChange = (6 * obedience_mod / aggression_mod);
-				if(this.isAdult() && (familiarity > 30 && familiarity < 80)){
-					//Nothing
-				}
-				else if(this.isAdult()){
-					familiarity += familiarityChange;
-				}
-				else if(!this.isAdult()){
-					float ageMod = 2f/(1f + TFC_Core.getPercentGrown(this));
-					familiarity += ageMod * familiarityChange;
-					if(familiarity > 70){
-						obedience_mod *= 1.01f;
-					}
-				}
-			}
-			else if(familiarity < 30){
-				familiarity -= 2*(TFC_Time.getTotalDays() - lastFamiliarityUpdate);
-				lastFamiliarityUpdate = totalDays;
-			}
+	public void setGrowingAge(int par1)
+	{
+		if(!TFC_Core.preventEntityDataUpdate)
+		{
+			this.dataWatcher.updateObject(12, Integer.valueOf(par1));
 		}
-		if(familiarity > 100)familiarity = 100;
-		if(familiarity < 0)familiarity = 0;
 	}
 
 	@Override
-	public void familiarize(EntityPlayer ep) {
-		ItemStack stack = ep.getHeldItem();
-		if(stack != null && stack.getItem()!= null && stack.getItem().equals(TFCItems.Powder) && stack.getItemDamage() == 9){
-			if (!ep.capabilities.isCreativeMode)
+	public void setHunger(int h)
+	{
+		hunger = h;
+	}
+
+	@Override
+	public void setInLove(boolean b)
+	{
+		this.inLove = b;
+	}
+
+	public void setLastFamiliarityUpdate(long lastFamiliarityUpdate)
+	{
+		this.lastFamiliarityUpdate = lastFamiliarityUpdate;
+	}
+
+	@Override
+	public void setObedienceMod(float obedienceMod)
+	{
+		this.obedienceMod = obedienceMod;
+	}
+
+	public void setPregnancyRequiredTime(int pregnancyRequiredTime)
+	{
+		this.pregnancyRequiredTime = pregnancyRequiredTime;
+	}
+
+	public void setPregnant(boolean pregnant)
+	{
+		this.pregnant = pregnant;
+	}
+
+	public void setRunning(boolean r)
+	{
+		running = r;
+	}
+
+	public void setSex(int sex)
+	{
+		this.sex = sex;
+	}
+
+	@Override
+	public void setSizeMod(float sizeMod)
+	{
+		this.sizeMod = sizeMod;
+	}
+
+	@Override
+	public void setStrengthMod(float strengthMod)
+	{
+		this.strengthMod = strengthMod;
+	}
+
+	public void setTimeOfConception(long timeOfConception)
+	{
+		this.timeOfConception = timeOfConception;
+	}
+
+	public void setWasRoped(boolean wasRoped)
+	{
+		this.wasRoped = wasRoped;
+	}
+
+	public void syncData()
+	{
+		if(dataWatcher!= null)
+		{
+			if(!this.worldObj.isRemote)
 			{
-				stack.stackSize--;
-				ep.inventory.setInventorySlotContents(ep.inventory.currentItem,stack);
-			}
-			worldObj.playSoundAtEntity(this, "random.burp", 0.5F, worldObj.rand.nextFloat() * 0.1F + 0.9F);
-			
-			familiarizedToday = true;
-			this.getLookHelper().setLookPositionWithEntity(ep, 0, 0);
-			this.playLivingSound();
-		}
+				this.dataWatcher.updateObject(13, Integer.valueOf(sex));
 
+				byte[] values = {
+						TFC_Core.getByteFromSmallFloat(sizeMod),
+						TFC_Core.getByteFromSmallFloat(strengthMod),
+						TFC_Core.getByteFromSmallFloat(aggressionMod),
+						TFC_Core.getByteFromSmallFloat(obedienceMod),
+						(byte) familiarity,
+						(byte) (familiarizedToday ? 1 : 0),
+						(byte) (pregnant ? 1 : 0),
+						(byte) 0 // Empty
+				};
+				ByteBuffer buf = ByteBuffer.wrap(values);
+				this.dataWatcher.updateObject(22, buf.getInt());
+				this.dataWatcher.updateObject(23, buf.getInt());
+				this.dataWatcher.updateObject(24, String.valueOf(timeOfConception));
+			}
+			else
+			{
+				sex = this.dataWatcher.getWatchableObjectInt(13);
+				
+				ByteBuffer buf = ByteBuffer.allocate(Long.SIZE / Byte.SIZE);
+				buf.putInt(this.dataWatcher.getWatchableObjectInt(22));
+				buf.putInt(this.dataWatcher.getWatchableObjectInt(23));
+				byte[] values = buf.array();
+				
+				sizeMod = TFC_Core.getSmallFloatFromByte(values[0]);
+				strengthMod = TFC_Core.getSmallFloatFromByte(values[1]);
+				aggressionMod = TFC_Core.getSmallFloatFromByte(values[2]);
+				obedienceMod = TFC_Core.getSmallFloatFromByte(values[3]);
+				
+				familiarity = values[4];
+				familiarizedToday = values[5] == 1;
+				pregnant = values[6] == 1;
+				
+				try
+				{
+					timeOfConception = Long.parseLong(this.dataWatcher.getWatchableObjectString(24));
+				} catch (NumberFormatException e){}
+			}
+		}
 	}
-	
-	//Unused for now
-	@Override
-	public boolean isFood(ItemStack item) {
-		return false;
-	}
-	
+
 	@Override
 	public boolean trySetName(String name, EntityPlayer player) {
-		if(this.checkFamiliarity(InteractionEnum.NAME, player) && !this.hasCustomNameTag()){
+		if (this.checkFamiliarity(InteractionEnum.NAME, player))
+		{
 			this.setCustomNameTag(name);
 			return true;
 		}
-		this.playSound(TFC_Sounds.DEERCRY,  6, (rand.nextFloat()/2F)+(isChild()?1.25F:0.75F));
+		this.playSound(TFC_Sounds.DEERCRY, 6, rand.nextFloat() / 2F + (isChild() ? 1.25F : 0.75F));
 		return false;
 	}
-	
+
+	/**
+	 * (abstract) Protected helper method to write subclass entity data to NBT.
+	 */
 	@Override
-	public boolean checkFamiliarity(InteractionEnum interaction, EntityPlayer player) {
-		boolean flag = false;
-		switch(interaction){
-		case MOUNT: flag = familiarity > 15;break;
-		case BREED: flag = familiarity > 20;break;
-		case SHEAR: flag = familiarity > 10;break;
-		case MILK: flag = familiarity > 10;break;
-		case NAME: flag = familiarity > 60;break;
-		case TOLERATEPLAYER: flag = familiarity > 40;break;
-		default: break;
-		}
-		if(!flag && player != null && !player.worldObj.isRemote){
-			player.addChatMessage(new ChatComponentText(StatCollector.translateToLocal("entity.notFamiliar")));
-		}
-		return flag;
+	public void writeEntityToNBT(NBTTagCompound nbt)
+	{
+		super.writeEntityToNBT(nbt);
+		nbt.setInteger ("Sex", sex);
+		nbt.setLong ("Animal ID", animalID);
+		nbt.setFloat ("Size Modifier", sizeMod);
+		
+		nbt.setInteger("Familiarity", familiarity);
+		nbt.setLong("lastFamUpdate", lastFamiliarityUpdate);
+		nbt.setBoolean("Familiarized Today", familiarizedToday);
+
+		nbt.setFloat ("Strength Modifier", strengthMod);
+		nbt.setFloat ("Aggression Modifier", aggressionMod);
+		nbt.setFloat ("Obedience Modifier", obedienceMod);
+		
+		nbt.setBoolean("wasRoped", wasRoped);
+
+		nbt.setInteger ("Hunger", hunger);
+		nbt.setBoolean("Pregnant", pregnant);
+		nbt.setFloat("MateSize", mateSizeMod);
+		nbt.setFloat("MateStrength", mateStrengthMod);
+		nbt.setFloat("MateAggro", mateAggroMod);
+		nbt.setFloat("MateObed", mateObedMod);
+		nbt.setLong("ConceptionTime", timeOfConception);
+		nbt.setInteger("Age", getBirthDay());
 	}
 }
